# Parallel_Divide_and_Conquer

./: CMakeLists.txt  DCFramework.hpp  DC_ciro.h  DaC_sequential.cpp  MergeSort.hpp  README.md  main.cpp  main_ciro.h
